import org.gradle.api.artifacts.maven.MavenDeployment

buildscript {
	repositories {
		jcenter()
		
	}

	dependencies {
		classpath 'com.bmuschko:gradle-nexus-plugin:2.2'
		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
	
	}
}
plugins {
	id 'me.champeau.gradle.jmh' version '0.2.0'
 }
def custom ={ "$rootDir/gradle/${it}.gradle"} //find custom plugins locally

 
apply plugin: 'me.champeau.gradle.jmh'
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'com.bmuschko.nexus'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'jacoco'
apply from: custom('jacoco-version')

sourceCompatibility = 1.8
version = '0.99'
jar {
    manifest {
        attributes 'Implementation-Title': 'Simple React', 'Implementation-Version': version
    }
}

apply from: custom('jacoco-config')
apply from: custom('jacoco-excludes')


repositories {
    mavenCentral()
	jcenter()

}

configurations {
	provided
}
dependencies {
   
	
	compile 'org.jooq:jool:0.9.7'
	compile 'org.pcollections:pcollections:2.1.2'
	compile 'com.nurkiewicz.asyncretry:asyncretry:0.0.7'
	compile 'uk.co.real-logic:Agrona:0.4.2'
	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.6.1'
	compile 'org.reactivestreams:reactive-streams:1.0.0'
	testCompile 'org.reactivestreams:reactive-streams-tck:1.0.0'
	testCompile group: 'junit', name: 'junit', version: '4.12'
	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
	testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
	provided 'com.aol.cyclops:cyclops-core:5.1.1'
	testCompile 'io.vertx:vertx-core:3.0.0'
	testCompile group: 'org.testng', name: 'testng', version:'5.14.10'
	provided group: 'org.projectlombok', name: 'lombok', version:'1.16.4'
	
	
	

}

sourceSets {
	main.compileClasspath += [configurations.provided]
	test.compileClasspath += [configurations.provided]
	test.runtimeClasspath += [configurations.provided]
}

eclipse.classpath.plusConfigurations += [configurations.provided]  // Eclipse users only

test {
    systemProperties 'property': 'value'
}


modifyPom {
	project {
		name 'simple-react'
		description 'Simple Fluent Api for Functional Reactive Programming with Java 8'
		url 'https://github.com/aol/simple-react'
		inceptionYear '2015'

		groupId 'com.aol.simplereact'
		artifactId 'simple-react'
		version "$version"
		
		scm {
			url 'scm:git@github.com:aol/simple-react.git'
            connection 'scm:git@github.com:aol/simple-react.git'
            developerConnection 'scm:git@github.com:aol/simple-react.git'
		}

		licenses {
			license {
				name 'The Apache Software License, Version 2.0'
				url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
				distribution 'repo'
			}
		}

		developers {
			developer {
				id 'johnmcclean-aol'
				name 'John McClean'
				email 'john.mcclean@teamaol.com'
			}
			developer {
				id 'kewangie'
				name 'Ke Wang'
				email 'ke.wang@teamaol.com'
			}
			developer {
				id 'tkountis'
				name 'Thomas Kountis Wang'
				email 'thomas.kountis@adtech.com'
			}
			developer {
				id 'colinfkennedy'
				name 'Colin Kennedy'
				email 'Colin.Kennedy@teamaol.com'
			}
		}
	}
}

extraArchive {
	sources = true
	tests = true
	javadoc = true
}

nexus {
	sign = true
	repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
	snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
}
